CB-32873 Support instancetypes with hyperdisk during datalake create on gcp
In case of new generation gcp instances the attached volumes request default disktype will be changed to the default of the custom instancetype
during datalake creation. This is a provider independent solution, but currently only gcp is affected.